# GCS

./: .gitignore  .gitignore_global  .gitmodules  .ninja_deps  .ninja_log  A VIRUS.txt  AttitudeIndicator.qml  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.7630dea  CMakeLists.txt.user.d42ef08  CustomTitleBar.qml  DroneClass.cpp  DroneClass.h  DroneCommandPanel.qml  DroneController.cpp  DroneController.h  DroneLabelComponent.qml  DroneMenuBar.qml  DroneStatusPanel.qml  DroneTrackingPanel.qml  FileHandler.cpp  FileHandler.h  Logger.cpp  Logger.h  MAVLinkReceiver.cpp  MAVLinkReceiver.h  MAVLinkSender.cpp  MAVLinkSender.h  MapController.cpp  MapController.h  MapDisplayTypeButton.qml  MapScaleBarIndicator.qml  MavLinkReceiver.cpp  MavLinkUdp.cpp  MavLinkUdp.h  MavlinkReceiver.h  MavlinkSender.cpp  MavlinkSender.h  MessageLogPanel.qml  (+101 more)
.cmake/api/v1/reply/: cache-v2-c0ebcbc3ef7dcb097e31.json  codemodel-v2-2677cd4ad4b2556975f9.json  index-2025-11-28T07-07-23-0629.json  target-GCS-Debug-f1c2263d73a9216f5673.json  target-GCS_autogen-Debug-fb2cdd24700d2da7f6e5.json  target-GCS_autogen_timestamp_deps-Debug-0cd47e1741aba4d01340.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-281e831ecb2109fb90e9.json  codemodel-v2-e57b7c767100c9f787d2.json  directory-.-Debug-bfbc9a00d77a9038530c.json  index-2026-01-09T22-54-47-0457.json  target-GCS-Debug-862de42d76345435661e.json  target-GCS_qmlimportscan-Debug-74493d2fb39da4eee329.json
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/deploy_qml_imports/: GCS.cmake
.qt/qml_imports/: GCS_conf.cmake
.qtc_clangd/: compile_commands.json
GCS_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
GCS_autogen/EWIEGA46WW/: moc_MavlinkReceiver.cpp.d  moc_MavlinkSender.cpp.d  moc_XbeeLink.cpp.d  moc_droneclass.cpp.d  moc_dronecontroller.cpp.d  moc_filehandler.cpp.d  moc_mainwindow.cpp.d  moc_mapcontroller.cpp.d
GCS_autogen/FVSNT77ZGO/: moc_dbmanager.cpp.d
backend/: dbmanager.cpp  dbmanager.h
components/: BatteryIcon.qml  ConnectionStatusIcon.qml  MenuButton.qml  MenuCollapsableBar.qml  OperationalStatusIcon.qml  PopupMenuItem.qml  StatusPill.qml  StyledComboBox.qml  ToastNotification.qml  UAVListItem.qml  UAVListPanel.qml  UAVMissionListPanel.qml  UniversalPopup.qml
data/: gcs.db
gcs_env/: pyvenv.cfg
gcs_env/Scripts/: activate  activate.bat
tests/: CMakeLists.txt  MockDroneClass.h  test_droneclass.cpp  test_uavmission.cpp
